--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
 .tl mark{
 	background-color:white;
 }
+
+.cr{
+	background-color: #f8f8f8;
+}
+
 a{
 	color:black;
 	text-decoration: none;
 }
 
-.bouton{
-	color: black;
-	border: none;
+body::-webkit-scrollbar {
+	width: 8px;
 }
 
-.bouton:hover{
-	color: orange;
+body::-webkit-scrollbar-track {
+	background: #2e4053;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: #85929e;
+}
+
+*{
+    margin: 0px;
+    padding: 0px;
+	scrollbar-color: #2e4053 #85929e;
+	scrollbar-width: thin;
 }
 
 nav{
@@ -35,6 +50,7 @@ nav ul li{
 }
 
 nav ul::after{
+    content: "";
     display: table;
     clear: both;
 }
@@ -45,13 +61,11 @@ nav a{
     color: black;
     border-bottom: 2px solid transparent;
     padding: 10px 0px;
-	background-color: white;
 }
 
 nav a:hover{
-    color: orange;
-    border-bottom: 2px solid gold;
-	background-color: white;
+    color: green;
+    border-bottom: 2px solid green;
 }
 
 .sous{
@@ -76,8 +90,13 @@ nav > ul li:hover .sous{
 }
 .sous a:hover{
     border-bottom: none;
-    background-color: #eee;
+    background-color: RGBa(200,200,200,0.1);
 }
 .deroulant > a::after{
     font-size: 12px;
+}
+
+.conteneur{
+  margin: 50px 20px;
+  height: 1500px;
 }
