--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
 	background-color:#202020;
-	background-image: url('img/vrac/font-bw.png');
+	background-image: url('/img/vrac/font-bw.png');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
