--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .nojs{
 	background-color:#b6f31e;
-	background-image: url('/img/vrac/font.png');
+	background-image: url('https://flamebousteur.github.io/img/vrac/font.png');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
@@ -15,7 +15,7 @@
 
 .index{
 	background-color:#202020;
-	background-image: url('/img/vrac/font-bw.png');
+	background-image: url('https://flamebousteur.github.io/img/vrac/font-bw.png');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
@@ -105,57 +105,72 @@ nav ul li{
 	float: left;
 	width: 50%;
 	text-align: center;
-    position: relative;
+	position: relative;
 }
 
 nav ul::after{
-    content: "";
-    display: table;
-    clear: both;
+	content: "";
+	display: table;
+	clear: both;
 }
 
 nav a{
-    display: block;
-    text-decoration: none;
-    color: black;
-    border-bottom: 2px solid transparent;
-    padding: 10px 0px;
+	display: block;
+	text-decoration: none;
+	color: black;
+	border-bottom: 2px solid transparent;
+	padding: 10px 0px;
 }
 
 nav a:hover{
-    color: green;
-    border-bottom: 2px solid green;
+	color: green;
+	border-bottom: 2px solid green;
 }
 
 .sous{
-    display: none;
-    box-shadow: 0px 1px 2px #CCC;
-    background-color: white;
-    position: absolute;
-    width: 100%;
-    z-index: 1;
+	display: none;
+	box-shadow: 0px 1px 2px #CCC;
+	background-color: white;
+	position: absolute;
+	width: 100%;
+	z-index: 1;
 }
 nav > ul li:hover .sous{
-    display: block;
+	display: block;
 }
 .sous li{
-    float: none;
-    width: 100%;
-    text-align: left;
+	float: none;
+	width: 100%;
+	text-align: left;
 }
+
 .sous a{
-    padding: 10px;
-    border-bottom: none;
+	padding: 10px;
+	border-bottom: none;
 }
+
 .sous a:hover{
-    border-bottom: none;
-    background-color: RGBa(200,200,200,0.1);
+	transition-property: border-left;
+	transition-duration: 0.1s;
+	border-bottom: none;
+	background-color: RGBa(200,200,200,0.1);
+	border-left: 3px solid green;
 }
+
+
+.sous a:active{
+	transition-property: border-left;
+	transition-duration: 0.1s;
+	border-bottom: none;
+	background-color: RGBa(200,200,200,0.1);
+	border-left: 10px solid green;
+}
+
 .deroulant > a::after{
-    font-size: 12px;
+	font-size: 12px;
 }
 
 .conteneur{
-  margin: 50px 20px;
-  height: 1500px;
+	margin: 50px 20px;
+	height: 1500px;
 }
