--- a/ressource/reset.css
+++ b/ressource/reset.css
@@ -23,14 +23,13 @@
 	z-index:2;
 }
 
-#ifr{
+video, iframe{
 	border:none;
 	width:300px;
-	visibility:hidden;
-	position:fixed;
 }
 
 a{
+	color:black;
 	text-decoration: none;
 	cursor:pointer;
 }
