--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*v 2.7*/
+/*v 2.8*/
 
 .nojs{
 	background-color:#b6f31e;
@@ -88,4 +88,148 @@ footer a{
 
 .cr img{
 	border-right: 1px solid rgba(0,0,0,0);
+}
+
+.tchatactiveron{
+	transition-property:margin-right,background-color;
+	transition-duration:1s;
+	position:fixed;
+	background-color:white;
+	border:none;
+	right:-5px;
+	bottom:10px;
+	z-index:10;
+	transform: rotate(90deg);
+}
+
+#chat{
+	transition-property:margin-right;
+	transition-duration:1s;
+	position:fixed;
+	background-color:white;
+	right:0px;
+	height:116px;
+	bottom:0px;
+	width:120px;
+	z-index:5;
+	width: 200px;
+	margin-right: -300px;
+	overflow-y: hidden;
+}
+
+#flamebousteur_lib_msg{
+	position: fixed;
+	margin: auto;
+	right: 0;
+	left: 0;
+	transition-property: opacity;
+	transition-duration: 0.25s;
+	opacity: 0;
+	padding: 5px;
+	border-bottom: 3px solid red;
+	background-color:white;
+	top: 0%;
+	width:50%;
+	font-size:15px;
+	text-align:center;
+	z-index:10;
+}
+
+body::-webkit-scrollbar {
+	width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+	background: #2e4053;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: #85929e;
+}
+
+nav{
+	width: 100%;
+	margin: 0 auto;
+	background-color: white;
+	top: 0px;
+}
+
+nav ul{
+	list-style-type: none;
+}
+
+nav ul li{
+	float: left;
+	width: 50%;
+	text-align: center;
+	position: relative;
+}
+
+nav ul::after{
+	content: "";
+	display: table;
+	clear: both;
+}
+
+nav a{
+	display: block;
+	text-decoration: none;
+	color: black;
+	border-bottom: 2px solid transparent;
+	padding: 10px 0px;
+}
+
+nav a:hover{
+	color: green;
+	border-bottom: 2px solid green;
+}
+
+.sous{
+	display: none;
+	box-shadow: 0px 1px 2px #CCC;
+	background-color: white;
+	position: absolute;
+	width: 100%;
+	z-index: 1;
+}
+
+nav > ul li:hover .sous{
+	display: block;
+}
+
+.sous li{
+	float: none;
+	width: 100%;
+	text-align: left;
+}
+
+.sous a{
+	padding: 10px;
+	border-bottom: none;
+}
+
+.sous a:hover{
+	transition-property: border-left;
+	transition-duration: 0.1s;
+	border-bottom: none;
+	background-color: RGBa(200,200,200,0.1);
+	border-left: 3px solid green;
+}
+
+
+.sous a:active{
+	transition-property: border-left;
+	transition-duration: 0.1s;
+	border-bottom: none;
+	background-color: RGBa(200,200,200,0.1);
+	border-left: 5px solid green;
+}
+
+.deroulant > a::after{
+	font-size: 12px;
+}
+
+.conteneur{
+	margin: 50px 20px;
+	height: 1500px;
 }
