--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ footer a{
 }
 
 #flamebousteur_lib_new{
-	border-radius: 10px 10px 0 0;
+	border-radius: 10px 10px 10px 10px;
 	position: sticky;
 	bottom: 0;
 	left: 0;
@@ -132,6 +132,7 @@ footer a{
 	padding-bottom:5px;
 	margin: auto;
 	border-top: 3px solid #0006;
+	border-bottom: 3px solid #0006;
 	background-color:#1f1f1f;
 	background-image: url("chrome://global/skin/media/imagedoc-darknoise.png");
 	font-size:15px;
