--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
 /*v 2.8.2*/
 
+*{
+	margin: 0px;
+	padding: 0px;
+	scrollbar-color: #2e4053 #85929e;
+	scrollbar-width: thin;
+}
+
+video, iframe{
+	border:none;
+	width:300px;
+}
+
+a{
+	color:black;
+	text-decoration: none;
+	cursor:pointer;
+}
+
 .nojs{
 	background-color:#b6f31e;
 	background-image: url('/img/vrac/font.png');
