--- a/style.css
+++ b/style.css
@@ -1,15 +1,60 @@
-/*v 2.10*/
-
-*{
+* {
+	--logo-colors-base: linear-gradient(to right, #ed9200, #126dff, #9acd32);
+	padding: 0;
 	margin: 0px;
 	padding: 0px;
+	border:none;
 	scrollbar-color: #2e4053 #85929e;
 	scrollbar-width: thin;
-	--logo-colors-base: linear-gradient(to right, #ed9200, #126dff, #9acd32);
 }
 
+a {
+	color:black;
+	text-decoration: none;
+	cursor:pointer;
+}
+
+body {
+	overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+	width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+	background: #2e4053;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: #85929e;
+}
+
+/* msg */
+#flamebousteur_lib_msg {
+	position: fixed;
+	margin: auto;
+	right: 0;
+	left: 0;
+	top: 0px;
+	width: 50%;
+	opacity: 0;
+	padding: 5px;
+	border-bottom: 3px solid red;
+	background-color: white;
+	transition: all 400ms;
+	text-align: center;
+	font-size: 15px;
+	z-index: 10;
+}
+
+#flamebousteur_lib_msg:hover {
+	top: 3px;
+}
+
+/* logo animation */
 #loader{
-	position: absolute;
+	position: fixed;
 	margin: auto;
 	top: 0;
 	bottom: 0;
@@ -17,7 +62,7 @@
 	right:0;
 	width: 50px;
 	height: 50px;
-	z-index: 5;
+	z-index: 100;
 }
 
 #loader::before{
@@ -75,19 +120,16 @@ svg{
 	}
 }
 
-/* reset */
-
-video, iframe{
-	border:none;
-	width:300px;
+/* chargementbar */
+.chargementbar {
+	position: fixed;
+	top: 0;
+	height: 5px;
+	background: linear-gradient(to right, #ed9200, #126dff, #9acd32);
+	transition: all 400ms;
 }
 
-a{
-	color:black;
-	text-decoration: none;
-	cursor:pointer;
-}
-
+/* end logo animation */
 .nojs{
 	background-color:#b6f31e;
 	background-image: url('/img/vrac/font.png');
@@ -96,231 +138,209 @@ a{
 	background-size: cover;
 }
 
-.index{
-	background-color:#202020;
+.ready {
 	background-image: url('/img/vrac/font-bw.png');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
 }
 
-/*stat*/
+@media (prefers-color-scheme: dark) {}
+@media (prefers-color-scheme: light) {}
 
-.fakehr{
+.typename {
+	text-align: center;
+}
+
+#dp-map {
+	padding: 0px 5px;
+	width: 99%;
+	margin-bottom: 10px;
+	z-index: 0;
+}
+
+#dp-map hr {
+	text-align: center;
 	margin: auto;
-	width: 95%;
-	height: 2px;
-	background-color: #0005;
-	margin-top: 2px;
-	margin-bottom: 5px;
-	border-radius: 1px;
+	width: 99%;
 }
 
-#exit-code{
-	visibility: hidden;
-	position:fixed;
+#dp-map div, .content {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-gap: 5px;
 }
 
-#stat tr{
-	background-color: white;
-	cursor:default;
-}
-
-#stat tr:hover{
-	transition-property: background-color;
-	transition-duration: 0.1s;
-	background-color: #ccc;
-}
-
-#stat td{
-	border-bottom: 1px solid black;
-}
-
-#dt{
-	width:200px;
-}
-
-/* end stat */
-
-#galery a span{
-	color: #fff0;
-	background-color: #fff0;
-	transition: all 0.25s;
-}
-
-#galery a:hover span{
-	color: #000;
-	background-color: #fff5;
-}
-
-#prlegentin{
-	position:absolute;
-	background-color:#0009;
-	color:white;
-	width: 200px;
-	height: 21px;
+/* card */
+card {
+	--h: 140px;
+	--w: 1fr;
+	font-family: sans-serif;
+	height: var(--h);
+	width: var(--w);
+	border-radius: 10px;
+	display: grid;
+	place-items: center;
+	grid-template-areas: "main";
 	overflow: hidden;
-	display: block;
-	transition-property:opacity;
-	transition-duration:0.25s;
-	opacity:0;
-	border-bottom: 2px solid black;
-	border-top: 1px solid black;
+	cursor: pointer;
+	text-decoration: none;
 }
 
-#prlegent{
-	display: inline-block;
-	margin-right:1px;
+card > *{
+	grid-area: main;
+	transition: all 400ms cubic-bezier(.23,1,.32,1);
 }
 
-.mask{
-	transition:width 0.1s ease, opacity 1s; 
-	width:0px;
-	opacity:1;
+card img, card video, card iframe{
+	height: calc(var(--h) + 5px);
+	width: 100%;
+	object-fit: cover;
+	z-index: 1;
+}
+
+card span {
+	opacity: 0;
+	color: white;
+	z-index: 2;
+}
+
+@media screen and (max-width: 600px) {
+	card img {
+		filter: brightness(0.5);
+	}
+	card span {
+  	opacity: 1;
+  }
+}
+
+card.scard:hover img, card.scard:hover video{
+	transform: scale(1.1);
+	filter: brightness(0.4) blur(1px);
+}
+
+card.scard:hover span {
+	transform: scale(1.1);
+	opacity: 1;
+}
+
+card.scard:active img, card.scard:active video {
+	transform: scale(1.3);
+	filter: brightness(0.4) blur(5px);
+}
+
+card.scard:active span {
+  transform: scale(1.3);
+	opacity: 0.75;
+}
+
+/* footer */
+footer a{
+	color:white;
+}
+
+/* file page */
+#divpage > .fileheader > span{
 	position: absolute;
-	background-color:white;
-	height:115px;
+	right: 0;
 }
 
-#prlegent:hover #prlegentin{
-	opacity:1;
+#divpage > .fileheader > .dl{
+	cursor: pointer;
+	text-decoration-line: underline;
+	transition: all 400ms;
+	right: 5px;
 }
 
-#prlegent:active .mask{
-	width:200px;
-	opacity:0;
+#divpage > .fileheader > .dl:hover{
+	transform: translate(-5px);
 }
 
-#data{
-	color:black;
+
+#divpage > .fileheader > .dl:before {
+	content: '';
+	background: url("/img/Nether_Star.gif");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	position: absolute;
+	top: -1px;
+	left: -20px;
+	width: 20px;
+	height: 20px;
+	transition: all 400ms;
 }
 
-#tele{
-	background-image:url("/img/zip/craftS+.png");
+#divpage > .fileheader > .dl:hover:before{
+	animation: jump 2s infinite ease;
+}
+
+@keyframes jump {
+	0% { transform: translate(0px, -2px); }
+	50%   { transform: translate(0px, 2px); }
+	100% { transform: translate(0px, -2px); }
+}
+
+#divpage > .filedata {
+	height: auto;
+	min-height: 100px;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
 }
 
-#video{
-	visibility:hidden;
-	position:fixed;
-}
-
-#ifr{
-	visibility:hidden;
-	position:fixed;
-}
-
-footer{
-	color:white;
-	border-top:1px solid black;
-}
-footer a{
-	color:white;
-}
-
-.tl mark{
-	background-color:white;
-}
-
-#dp-map{
-	background-color: #f8f8f8;
-}
-
-#galery a{
-	width: 300px;
-	height: 200px;
+#divpage > .filedata > div {
 	display: inline-block;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-#flamebousteur_lib_htmlalert{
-	position: absolute;
-	margin: auto;
-	top: 15%;
-	left: 0;
-	right: 0;
-	width: 50%;
-	font-size:15px;
-	z-index:10;
-	text-align: center;
-	background-color: white;
-}
-
-#flamebousteur_lib_htmlalert img{
-	width: 200px;
-}
-
-#flamebousteur_lib_htmlalert_x{
-	text-align: right;
-	margin-right:4px;
-	cursor: pointer;
-}
-
-.flamebousteur_lib_htmlalert{
-	border-bottom: 5px solid red;
-	cursor: pointer;
-}
-
-#flamebousteur_lib_new{
-	border-radius: 10px 10px 10px 10px;
-	position: sticky;
-	bottom: 0;
-	left: 0;
-	width:99%;
-	padding-top:5px;
-	padding-bottom:5px;
-	margin: auto;
-	border-top: 3px solid #0006;
-	border-bottom: 3px solid #0006;
-	background-color:#1f1f1f;
-	background-image: url("chrome://global/skin/media/imagedoc-darknoise.png");
-	font-size:15px;
-	text-align:center;
-	color: white;
-	visibility: visible;
-	z-index:10;
-}
-
-#flamebousteur_lib_msg{
-	position: fixed;
-	margin: auto;
-	right: 0;
-	left: 0;
-	transition-property: opacity;
-	transition-duration: 0.25s;
-	opacity: 0;
+	background: white;
 	padding: 5px;
-	border-bottom: 3px solid red;
-	background-color:white;
-	top: 0%;
-	width:50%;
-	font-size:15px;
-	text-align:center;
-	z-index:11;
+	margin: 5px;
+	border-radius: 10px;
 }
 
-body::-webkit-scrollbar {
-	width: 8px;
+#divpage > .filedata > div a {
+	text-decoration-line: underline;
+	transition: all 250ms;
+	border-radius: 10px;
+	padding: 0px 5px;
 }
 
-body::-webkit-scrollbar-track {
-	background: #2e4053;
+#divpage > .filedata > div a:hover {
+  transform: translate(0px, -1px);
+	background-color: #0002;
 }
 
-body::-webkit-scrollbar-thumb {
-	background-color: #85929e;
+#divpage > .filedata > div > span > a:hover {
+  transform: translate(0px, -1px);
+	background-color: #0002;
 }
 
+#divpage > .filedata > div > a {
+	text-align: right;
+}
+
+#divpage > .filedata > div * {	
+	display: block;
+}
+
+#divpage > .filecolor {
+	height: 4px;
+}
+
+#divpage > .stats {
+	position: relative;
+	text-align: right;
+	right: 5px;
+}
+
+/* navbar */
 nav{
 	width: 100%;
 	margin: 0 auto;
 	background-color: white;
 	top: 0px;
+	z-index: 10;
+	position: sticky;
 }
 
 nav ul{
@@ -396,9 +416,4 @@ nav > ul li:hover .sous{
 
 .deroulant > a::after{
 	font-size: 12px;
-}
-
-.conteneur{
-	margin: 50px 20px;
-	height: 1500px;
 }
